--- a/chatStyle.css
+++ b/chatStyle.css
@@ -4,10 +4,20 @@ body {
     height: 100vh;
     /* width: 100vw; */
     overflow: hidden;
+    /* Vertically center the container in the viewport */
+    /* justify-content: center; */
+    /* Horizontally center the container in the viewport */
 }
 
 .flexBox {
     display: flex;
+    /* position: absolute; */
+    /* top: 50%; */
+    /* Center vertically by moving 50% from the top */
+    /* left: 50%; */
+    /* Center horizontally by moving 50% from the left */
+    /* transform: translate(-50%, -50%); */
+    /* Adjust to center the element properly */
 }
 
 .profileBox {
@@ -16,6 +26,7 @@ body {
     border-radius: 2%;
     margin: 1% 0.2% 1% 0.4%;
     background: white;
+    justify-content: center;
 }
 
 .chatBox {
@@ -37,12 +48,13 @@ body {
     position: absolute;
     bottom: 0;
     background: none;
-    margin-bottom: 0.5%;
+    margin-bottom: 3%;
+    background: white;
 }
 
 .typeBox {
     width: 50%;
-    height: 95%;
+    height: 100%;
     background: #D9D9D9;
     border-radius: 30px;
     margin: auto auto;
