--- a/public/chatStyle.css
+++ b/public/chatStyle.css
@@ -24,9 +24,10 @@ body {
     width: 30%;
     height: 90vh;
     border-radius: 2%;
-    margin: 1% 0.2% 1% 0.4%;
+    margin: 2% 0.2% 1% 0.4%;
     background: white;
     justify-content: center;
+    position: relative;
 }
 
 .chatBox {
@@ -36,9 +37,8 @@ body {
     position: relative;
     display: flex;
     align-items: center;
-    margin: 1% 0.4% 2% 0.2%;
-    /* background: #EE964B; */
-    background: purple;
+    margin: 2% 0.4% 1% 0.2%;
+    background: #EE964B;
 }
 
 .bottomChat {
@@ -70,3 +70,13 @@ body {
     height: 1em;
     align-items: flex-end;
 } */
+
+.logo {
+    /* border: 2px; */
+    width: 100%;
+    /* height: 100%; */
+    display: block;
+    position: absolute;
+    top: 0;
+    /* margin-top: -10%; */
+}
