--- a/ChickChatDressing/face.css
+++ b/ChickChatDressing/face.css
@@ -40,7 +40,7 @@ header img {
     align-items: center;
     flex-wrap: wrap;
     width: 100%;
-    height: 80%;
+    /* height: 80%; */
 }
 
 .dressing {
