--- a/ChickShop/ChickShop.css
+++ b/ChickShop/ChickShop.css
@@ -19,6 +19,56 @@ body {
     overflow: hidden;
 }
 
+.active {
+    display: flex;
+}
+
+.confirm-box {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: none;
+    justify-content: center;
+    height: 40%;
+    width: 80%;
+    background: white;
+    text-align: center;
+    line-height: 5rem;
+    font-size: clamp(1.2rem, 4vw, 2.5rem);;
+    z-index: 200;
+}
+
+.confirm-box .Q {
+    width: 100%;
+    height: 10%;
+    pointer-events: none;
+}
+
+.confirm-box .A {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    bottom: 0;
+    height: 50%;
+    width: 100%;
+}
+
+.confirm-box .A button {
+    font-size: 4vw;
+    background-color: var(--base-color);
+    border-radius: 20px;
+    padding: 2% 5%;
+    width: 30%;
+    z-index: 400;
+}
+
+.confirm-box .A button:hover {
+    background: yellow;
+    cursor: pointer;
+}
+
 header {
     position: relative;
     display: flex;
