--- a/ChickChatHome/home.css
+++ b/ChickChatHome/home.css
@@ -339,6 +339,14 @@ h5.name {
     background: white;
 }
 
+.image-list {
+    width: 100%;
+}
+
+.image-item {
+    border: 2px solid #333;
+}
+
 .subtitle {
     text-align: center;
     font-size: 32px;
@@ -379,10 +387,11 @@ h5.name {
 
 .slider-wrapper .image-list {
     display: grid;
+    padding: 20px;
     gap: 18px;
     overflow-x: auto;
     scrollbar-width: none;
-    grid-template-columns: repeat(10, 1fr);
+    grid-template-columns: repeat(10, 100%);
 }
 
 .slider-wrapper .image-list::-webkit-scrollbar {
@@ -390,7 +399,7 @@ h5.name {
 }
 
 .slider-wrapper .image-list .image-item {
-    width: 325px;
+    width: 100%;
     height: 400px;
     object-fit: cover;
 }
