--- a/ChickChatDressing/Dressing.css
+++ b/ChickChatDressing/Dressing.css
@@ -187,20 +187,7 @@ header img {
     max-width: 320px;
 }
 
-<<<<<<< HEAD
-select {
-=======
-#Status {
-    background: var(--box-color);
-    min-width: 300px;
-    max-width: 320px;
-    font-size: 1.2rem;
-    padding: 10px;
-    border: none;
-}
-
-ul {
->>>>>>> Beta
+#Select{
     list-style: none;
     background: var(--box-color);
     min-width: 300px;
