--- a/Chat/Test/views/room.ejs
+++ b/Chat/Test/views/room.ejs
@@ -34,8 +34,8 @@
 */
         
         *,
-        ::before,
-        ::after {
+         ::before,
+         ::after {
             box-sizing: border-box;
             /* 1 */
             border-width: 0;
@@ -46,8 +46,8 @@
             /* 2 */
         }
         
-        ::before,
-        ::after {
+         ::before,
+         ::after {
             --tw-content: '';
         }
         /*
@@ -250,14 +250,14 @@ Remove the inheritance of text transform in Edge and Firefox.
 Use the modern Firefox focus style for all focusable elements.
 */
         
-        :-moz-focusring {
+         :-moz-focusring {
             outline: auto;
         }
         /*
 Remove the additional `:invalid` styles in Firefox. (https://github.com/mozilla/gecko-dev/blob/2f9eacd9d3d995c937b4251a5557d95d494c9be1/layout/style/res/forms.css#L728-L737)
 */
         
-        :-moz-ui-invalid {
+         :-moz-ui-invalid {
             box-shadow: none;
         }
         /*
@@ -271,8 +271,8 @@ Add the correct vertical alignment in Chrome and Firefox.
 Correct the cursor style of increment and decrement buttons in Safari.
 */
         
-        ::-webkit-inner-spin-button,
-        ::-webkit-outer-spin-button {
+         ::-webkit-inner-spin-button,
+         ::-webkit-outer-spin-button {
             height: auto;
         }
         /*
@@ -290,7 +290,7 @@ Correct the cursor style of increment and decrement buttons in Safari.
 Remove the inner padding in Chrome and Safari on macOS.
 */
         
-        ::-webkit-search-decoration {
+         ::-webkit-search-decoration {
             -webkit-appearance: none;
         }
         /*
@@ -298,7 +298,7 @@ Remove the inner padding in Chrome and Safari on macOS.
 2. Change font properties to `inherit` in Safari.
 */
         
-        ::-webkit-file-upload-button {
+         ::-webkit-file-upload-button {
             -webkit-appearance: button;
             /* 1 */
             font: inherit;
@@ -393,7 +393,7 @@ Set the default cursor for buttons.
 Make sure disabled buttons don't get the pointer cursor.
 */
         
-        :disabled {
+         :disabled {
             cursor: default;
         }
         /*
@@ -482,7 +482,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
             --tw-backdrop-sepia: ;
         }
         
-        ::backdrop {
+         ::backdrop {
             --tw-border-spacing-x: 0;
             --tw-border-spacing-y: 0;
             --tw-translate-x: 0;
@@ -796,7 +796,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                 <a href="/"><img src="/assets/cc_logo.png" class="logo"></a>
             </div>
             <div class="w-full lg:w-4/5 chatBox bg-color02 mr-5 ml-5 lg:ml-1 my-5 rounded-2xl p-5 relative">
-                <h3 class="text-center text-3xl font-cherry"> Chickchat Room #<span class="" id="roomID">000192</span> </h3>
+                <h3 class="text-center text-3xl font-cherry"> Chickchat </h3>
                 <div class="overflow-auto h-[96%] m-2">
                     <div id="message-container"> </div>
                     <!-- คู่สนทนา -->
