--- a/Chat/Test/views/room.ejs
+++ b/Chat/Test/views/room.ejs
@@ -942,7 +942,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
             <!-- กรอบซ้าย -->
             <div class="w-0 lg:w-1/5 lg:profileBox lg:bg-white lg:ml-5 lg:mr-1 lg:my-5 lg:rounded-2xl lg:p-5"
                 id="container">
-                <a href="#"><img src="../assets/cc_logo.PNG" class="logo"></a>
+                <a href="#"><img src="../assets/LOGO.PNG" class="logo"></a>
                 <!-- <img src="assets/cc_logo.PNG" class="logo"> -->
 
                 <div class="home"><i class="fa-solid fa-house"></i></div>
