--- a/Chat/Test/views/room.ejs
+++ b/Chat/Test/views/room.ejs
@@ -19,18 +19,141 @@
     <link href="https://fonts.googleapis.com/css2?family=Cherry+Bomb+One&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/26997adfb2.js" crossorigin="anonymous"></script>
 </head>
+<style>
+    .logo {
+        width: 100%;
+    }
 
+    #left-container {
+        position: relative;
+    }
+
+    .home {
+        position: absolute;
+        bottom: 10px;
+        font-size: 2rem;
+    }
+
+    .home:hover {
+        color: yellow;
+    }
+
+    .random-chat {
+        position: absolute;
+        width: 60%;
+        bottom: 10px;
+        right: 10px;
+        font-size: 2rem;
+        border-radius: 20px;
+        background: rgba(238, 150, 075);;
+    }
+
+    .random-chat:hover {
+        background: yellow;
+    }
+
+    #send-container {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 10px;
+    }
+
+    .input-zone {
+        display: flex;
+        align-items: center;
+    }
+
+    #message-input {
+        position: relative;
+        flex: 1;
+        width: 100%;
+        height: 3rem;
+    }
+
+    #emo-button {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 40px;
+        font-size: 2.5rem;
+        margin-right: 30px;
+    }
+
+    #send-button {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        right: 20px;
+        font-size: 2.5rem;
+    }
+
+    .active {
+        display: grid !important;
+    }
+
+    .sticker-box {
+        position: absolute;
+        bottom: 70px;
+        right: 10px;
+        display: none;
+        grid-template-columns: repeat(3, 1fr);
+        width: 50%;
+        /* height: 50%; */
+        background: white;
+    }
+
+    .stk {
+        height: 1fr;
+        width: 1fr;
+    }
+
+    .stk:hover {
+        background: yellow;
+    }
+
+    @media (max-width: 1024px) {
+        .home,
+        .random-chat {
+            display: none;
+        }
+
+        .sticker-box {
+            position: absolute;
+            bottom: 50px;
+            right: 10px;
+            display: none;
+            grid-template-columns: repeat(3, 1fr);
+            width: 80%;
+            /* height: 50%; */
+            background: white;
+        }
+    }
+</style>
 
 <body>
     <div class="bg-color01">
         <div class="flex h-screen">
-            <div class="w-0 lg:w-1/5 lg:profileBox lg:bg-white lg:ml-5 lg:mr-1 lg:my-5 lg:rounded-2xl lg:p-5">
+            <div class="w-0 lg:w-1/5 lg:profileBox lg:bg-white lg:ml-5 lg:mr-1 lg:my-5 lg:rounded-2xl lg:p-5" id="left-container">
                 <a href="/"><img src="/assets/cc_logo.png" class="logo"></a>
+                <button class="home"><i class="fa-solid fa-house"></i></button>
+                <button class="random-chat">Random</button>
             </div>
 
             <!-- ช่องแชทตรงกลาง -->
             <div class="w-full lg:w-4/5 chatBox bg-color02 mr-5 ml-5 lg:ml-1 my-5 rounded-2xl p-5 relative">
                 <h3 class="text-center text-3xl font-cherry"> Chickchat </h3>
+
+                <div class="sticker-box">
+                    <button class="stk"><img src="image/IMG_0991.PNG" alt="image"></button>
+                    <button class="stk"><img src="image/IMG_0993.PNG" alt=""></button>
+                    <button class="stk"><img src="image/IMG_1001.PNG" alt=""></button>
+                    <button class="stk"><img src="image/IMG_0995.PNG" alt=""></button>
+                    <button class="stk"><img src="image/IMG_0996.PNG" alt=""></button>
+                    <button class="stk"><img src="image/IMG_0997.PNG" alt=""></button>
+                </div>
+
                 <div class="overflow-auto h-[96%] m-2">
                     <div id="message-container"> </div>
                     <!-- คู่สนทนา -->
@@ -38,9 +161,13 @@
 
                     <div class="w-[90%] flex justify-center bottom-8 lg:bottom-10 form-input mt-2" name="buttomChat">
                         <form id="send-container">
-                            <input type="text" id="message-input" class="w-[60%] rounded-xl bg-white mx-auto p-1 px-4" required></input>
+                            <input type="text" id="message-input" class="w-[60%] rounded-xl bg-white mx-auto p-1 px-4"
+                                required></input>
                             <!-- <img src="./assets/emojiChat.png" class="block" alt="Emoji Button" onclick="alert('เด้ง Modal จ้า')"> -->
-                            <button type="submit" id="send-button" class="rounded-full">Send</button>
+                            <button type="submit" id="send-button" class="rounded-full"><i
+                                    class="fa-solid fa-arrow-right"></i></button>
+                            <button type="submit" id="emo-button" class="rounded-full emotion"><i
+                                    class="fa-solid fa-face-smile"></i></button>
                         </form>
 
                         <!-- <div class="w-[100%] justify-center fixed bottom-0 lg:bottom-10 rounded form-input mt-5" name="buttomChat"> -->
